# whsnow

./: .gitignore  Makefile  README.rst  pyproject.toml
data/2023-05-03T09:53:24.923947/: 59714df5-d8fb-480d-9b20-8acbdf98f9ba.fit  b9d7b98b-aaf3-4ec5-8c29-1bba1de4a975.fit  bbf0206c-46f0-4bbe-b033-519e74474097.fit
data/2023-05-03T09:54:15.382056/: c73d28e4-fe24-49ef-8fc1-ef1008bd224d.fit  cd73d089-1700-440f-a850-e5eba20e95c0.fit
notebooks/: main.ipynb
tests/: __init__.py  test_wahoosnowmaker.py
wahoosnowmaker/: __init__.py  namespace.py
wahoosnowmaker/app/: Home.py  charts.py  chartsplotly.py  create_dataset_folder.py  domain.py  markdown.py  saveload.py  security.py
wahoosnowmaker/app/pages/: Analysis.py  Debug.py
wahoosnowmaker/app/viz/: chartsaltair.py  chartsplotly.py  map_calculations.py  map_styles.py  styles.py
wahoosnowmaker/parser/: fitparser.py  naming_mapping.py  parse_folder.py  pipes.py  records_naming_mapping.py
wahoosnowmaker/utils/: create_dataset_folder.py  logger.py  saveload.py
