[tool.poetry]
name = "wahoosnowmaker"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
altair = "^4.2.2"
streamlit = "^1.21.0"
garmin-fit-sdk = "^21.107.0"
polars = "^0.17.7"
watchdog = "^3.0.0"
pyarrow = "^11.0.0"
streamlit-folium = "^0.11.1"
st-pages = "^0.4.1"
vegafusion = {extras = ["embed"], version = "^1.2.3"}
plotly = "^5.14.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
ruff = "^0.0.253"
black = "^23.1.0"
pyclean = "^2.2.0"
pre-commit = "^3.1.1"
ipykernel = "^6.16.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
rich = "^13.3.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
